force-app/main/default/objects/Unit_Progress__c/Unit_Progress__c.object-meta.xml
<CustomObject>
    <label>Unit Progress</label>
    <nameField>
        <label>Unit Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>