force-app/main/default/objects/Unit_Progress__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <label>Module Progress</label>
    <referenceTo>Module_Progress__c</referenceTo>
    <relationshipLabel>Unit Progresses</relationshipLabel>
    <relationshipName>Unit_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>