force-app/main/default/objects/Unit_Progress__c/fields/Points_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Points_Obtained__c</fullName>
    <label>Points Obtained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>