force-app/main/default/objects/Unit_Progress__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Progresses</relationshipLabel>
    <relationshipName>Unit_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>