force-app/main/default/objects/Unit_Progress__c/fields/Unit_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Unit_Attempts__c</fullName>
    <label>Unit Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>